k8s/07-frontend.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: frontend

  labels:

    app: ticketing

    component: frontend

spec:

  replicas: 1

  selector:

    matchLabels:

      app: ticketing

      component: frontend

  template:

    metadata:

      labels:

        app: ticketing

        component: frontend

    spec:

      containers:

        - name: frontend

          image: "image-registry.openshift-image-registry.svc:5000/ticketing-app/frontend:latest"

          ports:

            - containerPort: 3000

              protocol: TCP

          readinessProbe:

            tcpSocket:

              port: 3000

            initialDelaySeconds: 5

            periodSeconds: 10

            timeoutSeconds: 3

            failureThreshold: 3

          livenessProbe:

            tcpSocket:

              port: 3000

            initialDelaySeconds: 15

            periodSeconds: 20

            timeoutSeconds: 3

            failureThreshold: 3

          resources:

            requests:

              cpu: 100m

              memory: 128Mi

            limits:

              cpu: 500m

              memory: 256Mi

---

apiVersion: v1

kind: Service

metadata:

  name: frontend

  labels:

    app: ticketing

    component: frontend

spec:

  selector:

    app: ticketing

    component: frontend

  ports:

    - name: http

      port: 3000

      targetPort: 3000

      protocol: TCP

  type: ClusterIP
